# C-_Face_recognitiotn

./: CMakeLists.txt  README.md
public/: index.html  script.js
src/: face_detect.cpp  server.cpp  webgl.cpp
